@@ -7,6 +7,7 @@ import org.springframework.web.bind.annotation.*;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @RestController
 public class GeocodeController {
@@ -14,7 +15,7 @@ public class GeocodeController {
     @RequestMapping(path = "/geocode", method = RequestMethod.GET )
     public String getGeocode(@RequestParam String address) throws IOException {
         OkHttpClient client = new OkHttpClient();
-        String encodedAddress = URLEncoder.encode(address, "UTF-8");
+        String encodedAddress = URLEncoder.encode(address, StandardCharsets.UTF_8);
         Request request = new Request.Builder()
                 .url("https://google-maps-geocoding.p.rapidapi.com/geocode/json?language=en&address=" + encodedAddress)
                 .get()
@@ -23,6 +24,7 @@ public class GeocodeController {
                 .build();
 
         ResponseBody responseBody = client.newCall(request).execute().body();
+        assert responseBody != null;
         return responseBody.string();
     }
 
